--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=open-nis-patient-care-summary
+sonar.projectKey=open-nis-nurse-kardex
 sonar.organization=ray-ang-github
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Open-NIS Patient Care Summary WordPress Plugin
+#sonar.projectName=Open-NIS Patient Care Summary
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
